samples/_failures_safe/1761363615_c59381_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_934f2a15.c: In function ‘is_in_heap’:
./samples/SAFE/__tmp_934f2a15.c:150:5: error: expected expression at end of input
  150 |     if (!
      |     ^~
./samples/SAFE/__tmp_934f2a15.c:150:5: error: expected declaration or statement at end of input
